Fixed javascript, styling, and flex layout

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
     "name": "Auto Grapher",
-    "short_name": "AP",
+    "short_name": "Auto Grapher",
     "start_url": "/Auto-Grapher",
     "icons": [
         {
