Fix start_url casing in manifest.json for consistency

--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
     "name": "Auto Grapher",
     "short_name": "Auto Grapher",
-    "start_url": "/Auto-Grapher",
+    "start_url": "/auto-grapher",
     "icons": [
         {
             "src": "https://caretparrot.github.io/My-Libraries/Profile%20Picture.png",
